// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should match snapshot when sidebar closed 1`] = `
<Connect
  actions={
    Object {
      "addToArray": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
      "updateGraphData": [Function],
    }
  }
  isSidebarOpen={false}
  mapToProps={[Function]}
  setStoreState={[MockFunction]}
  sidebarView="networkGraphs"
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_GRAPHS 1`] = `
<Connect
  actions={
    Object {
      "addToArray": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
      "updateGraphData": [Function],
    }
  }
  isSidebarOpen={false}
  mapToProps={[Function]}
  setStoreState={[MockFunction]}
  sidebarView="networkGraphs"
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_NEIGHBOURHOOD 1`] = `
<Connect
  actions={
    Object {
      "addToArray": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
      "updateGraphData": [Function],
    }
  }
  isSidebarOpen={false}
  mapToProps={[Function]}
  setStoreState={[MockFunction]}
  sidebarView="nodeNeighbourhood"
>
  <Component />
</Connect>
`;
